--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "daisyui": "^5.0.50",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-image-fallback": "^8.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.0",
+    "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
